# app-app

./: .gitignore  .gitmodules  AGENTS.md
alm-app/backend/: .env.example  Dockerfile  alembic.ini  coverage.xml  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest-out.txt  run-migrations-docker.ps1  scratch_test.py
alm-app/backend/alm_meta/: artifact_catalog.yaml  change_manifest.yaml  domain_meta.yaml  domain_meta_changelog.yaml  flaky_quarantine.yaml  kpi_thresholds.yaml  test_manifest.yaml  traceability_graph.yaml
alm-app/backend/alm_meta/seed/: default_policies.yaml  default_privileges.yaml  default_roles.yaml  default_workflow.yaml
alm-app/backend/migrations/: env.py
alm-app/backend/migrations/versions/: 001_initial_schema.py  002_add_projects.py  003_add_project_code.py  004_add_process_template_version_id.py  005_add_process_templates.py  006_add_artifacts.py  007_add_artifact_parent_id.py  008_add_artifact_custom_fields.py  009_add_process_template_fields.py  010_add_project_status_settings_metadata.py  011_add_project_members.py  012_add_artifact_key_state_reason_resolution_rank.py  013_add_project_artifact_seq.py  014_add_workflow_transition_options_to_manifests.py  015_add_tasks.py  016_add_artifacts_search_fts.py  017_add_comments.py  018_add_cycle_nodes.py  019_add_artifact_cycle_node_id.py  020_add_area_nodes.py  021_add_artifact_area.py  022_add_artifact_links.py  023_add_attachments.py  024_add_saved_queries.py  025_add_workflow_rules.py  026_add_teams.py  027_add_access_audit.py  028_add_cycle_area_created_updated_by.py  029_add_comments_attachments_updated_by.py  030_widen_process_template_version_version.py  031_target_date_string_to_date_in_manifests.py  032_add_dual_roots_to_existing_projects.py  033_add_root_defect_and_reparent.py  034_add_cycle_node_kind.py  035_merge_manifest_metadata_defaults.py  036_artifact_links_unique_constraint.py  037_add_artifact_links_sort_order.py  038_project_work_item_tags.py  039_task_tags.py  040_migrate_quality_custom_fields_json.py  (+19 more)
alm-app/backend/reports/: saved_query_filter_key_migration.json
alm-app/backend/scripts/: compute_risk.py  create_test_db.sql  derive_execution_report.py  docker_verify_schema.py  export_traceability_graph.py  flaky_quarantine_check.py  kpi_threshold_check.py  lint_src.py  lint_tests.py  migrate_saved_query_filter_keys.py  publish_gate_report.py  report.py  reset_db.py  risk_gate.py  run_gates.py  run_seed_once.py  select_tests.py  split_orgs_router.py  validate_metadata.py
alm-app/backend/src/alm/: __init__.py  main.py
alm-app/backend/src/alm/admin/: __init__.py
alm-app/backend/src/alm/artifact/: __init__.py
alm-app/backend/tests/: README.md  conftest.py  test_artifact_flow.py  test_artifact_import_export.py  test_artifact_link_bulk.py  test_artifact_relationship_bulk.py  test_artifact_relationships.py  test_auth_flow.py  test_dashboard_flow.py  test_demo_seed_stack.py  test_deploy_webhook.py  test_deployment_events.py  test_report_definitions_api.py  test_reporting_api.py  test_scm_links.py  test_stale_traceability.py  test_tenant_flow.py  test_traceability_summary.py
alm-app/backend/tests/integration/: test_admin_api.py  test_ai_api.py  test_domain_event_outbox.py
alm-app/backend/tests/support/: __init__.py  manifests.py  mocks.py
alm-app/backend/tests/unit/: test_alembic_scripts.py  test_artifact_gate_scripts.py  test_batch_transition_router.py  test_create_project_defaults.py  test_dashboard_handlers.py  test_dual_root.py  test_field_masking.py  test_form_schema_builder.py  test_fulltext_config.py  test_guard_evaluator.py  test_http_middlewares.py  test_list_schema.py  test_main.py  test_manifest_link_refs.py  test_manifest_workflow_metadata.py  test_mpc_contract.py  test_mpc_features.py  test_mpc_resolver.py  test_permitted_transitions_and_trigger.py  test_quality_manifest_extension.py  test_quality_parent_rules.py  test_quality_test_params.py  test_scm_api_wiring.py  test_scm_webhook_delivery_idempotency.py  test_scm_webhook_policy.py  test_security_dependencies.py  test_seed_planning_leaf.py  test_validate_manifest_board.py  test_workflow_sm.py
(+1258 files in other folders)
