[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
mpc = { path = "../../manifest-platform-core-suite" }
statelesspy = { path = "../../../statelesspy" }

[project]
name = "alm"
version = "0.1.0"
description = "ALM - Application Lifecycle Management"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "redis[hiredis]>=5.2.0",
    "structlog>=24.4.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "taskiq[redis]>=0.11.0",
    "taskiq-redis>=1.0.0",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "prometheus-client>=0.21.0",
    "httpx>=0.28.0",
    "nh3>=0.2.0",
    "pyyaml>=6.0.0",
    "python-multipart>=0.0.9",
    "email-validator>=2.2.0",
    "mpc>=0.0.6",
    "statelesspy>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "factory-boy>=3.3.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "schemathesis>=3.37.0",
    "pip-audit>=2.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/alm"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
