[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
mpc = { path = "../../manifest-platform-core-suite" }

[project]
name = "alm"
version = "0.1.0"
description = "ALM - Application Lifecycle Management"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "redis[hiredis]>=5.2.0",
    "structlog>=24.4.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "taskiq>=0.12.1",
    "taskiq-redis>=1.0.0",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "prometheus-client>=0.21.0",
    "httpx>=0.28.0",
    "nh3>=0.2.0",
    "pyyaml>=6.0.0",
    "python-multipart>=0.0.9",
    "email-validator>=2.2.0",
    "mpc>=0.1.0",
    "openpyxl>=3.1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=1.3.0,<2",
    "httpx>=0.28.0",
    "factory-boy>=3.3.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "schemathesis>=3.37.0",
    "pip-audit>=2.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/alm"]

# CI/Gate Ruff: `uv run python scripts/lint_src.py` and `scripts/lint_tests.py` (single source for test rule sets).
[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM"]
# B008: FastAPI/SQLAlchemy use Depends(), Query(), etc. in parameter defaults by design.
# TCH (flake8-type-checking) removed: TC00x churn across the codebase without clear benefit for this repo.
# A002: domain factories commonly use parameter name `id` (entity identity), shadowing builtin id().
# E501: many data-heavy lines sit slightly over 120 cols; reformatting churn outweighs benefit for CI.
ignore = ["B008", "A002", "E501"]

[tool.ruff.lint.per-file-ignores]
"src/alm/orgs/api/routes_*.py" = ["F403", "F405", "B008", "A004", "E501"]
"src/alm/orgs/api/_router_deps.py" = ["F401"]
"src/alm/shared/infrastructure/email_templates.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
